fix: title text overflow

--- a/src/blocks/card/card.scss
+++ b/src/blocks/card/card.scss
@@ -109,7 +109,24 @@
       }
 
       &__title {
+        max-width: 230px;
         font-size: 16px;
+
+        @media (min-width: $screen-t) {
+          max-width: 480px;
+        }
+
+        @media (min-width: $screen-ti) {
+          max-width: 260px;
+        }
+
+        @media (min-width: $screen-tl) {
+          max-width: 350px;
+        }
+
+        @media (min-width: $screen-d) {
+          max-width: 140px;
+        }
       }
 
       &__icon {
@@ -181,7 +198,7 @@
 
   &__group {
     display: flex;
-    flex-direction: column;
+    flex-flow: wrap column;
     gap: 8px;
     align-items: center;
     margin-top: 8px;
@@ -207,7 +224,9 @@
   &__title {
     @include fluid-title();
 
+    max-width: 115px;
     margin: 0;
+    overflow: hidden;
     font-weight: 400;
     line-height: 1.25;
     letter-spacing: 0.32px;
@@ -215,10 +234,19 @@
     text-align: center;
     text-overflow: ellipsis;
 
+    @media (min-width: $screen-t) {
+      max-width: 235px;
+    }
+
     @media (min-width: $screen-ti) {
+      max-width: 200px;
       font-size: 32px;
       letter-spacing: 0.64px;
       text-align: left;
+    }
+
+    @media (min-width: $screen-tl) {
+      max-width: 256px;
     }
   }
 
